@@ -1,3 +1,8 @@
+2020-06-08  Aurélien Aptel  <aaptel@suse.com>
+
+	* etc/poke-mode.el: New file.
+	* HACKING (Writing Poke): Mention poke-mode.
+
 2020-06-06  Bruno Haible  <bruno@clisp.org>
 
 	doc: Give users the freedom to use their own style in the HTML doc.
